--- a/index.html
+++ b/index.html
@@ -349,6 +349,18 @@
             padding: 120px 0;
             position: relative;
         }
+        
+        /* First section keeps gradient showing through */
+        .section#future {
+            background: transparent;
+        }
+        
+        /* All sections from "What's Possible" onwards get dark purple */
+        .section#features,
+        .section#benefits,
+        .section:not(#future) {
+            background: #3d2755;
+        }
 
         .section-title {
             font-size: 3rem;
@@ -553,7 +565,7 @@
             text-align: center;
             position: relative;
             overflow: hidden;
-            background: transparent;
+            background: #3d2755;
         }
 
         .final-cta::before {
@@ -578,12 +590,12 @@
             font-size: 3rem;
             font-weight: 800;
             margin-bottom: 24px;
-            color: var(--dark-bg);
+            color: #ffffff;
         }
 
         .final-cta p {
             font-size: 1.3rem;
-            color: var(--dark-bg);
+            color: var(--text-secondary);
             margin-bottom: 16px;
             max-width: 700px;
             margin-left: auto;
@@ -607,23 +619,23 @@
 
         .final-cta .btn-secondary {
             background: transparent;
-            color: var(--dark-bg);
-            border-color: var(--dark-bg);
+            color: #ffffff;
+            border-color: rgba(255, 255, 255, 0.3);
             backdrop-filter: none;
         }
 
         .final-cta .btn-secondary:hover {
-            background: var(--dark-bg);
+            background: rgba(255, 255, 255, 0.15);
             color: #ffffff;
-            border-color: var(--dark-bg);
-            box-shadow: 0 12px 30px rgba(15, 15, 26, 0.3);
+            border-color: rgba(255, 255, 255, 0.5);
+            box-shadow: 0 12px 30px rgba(255, 255, 255, 0.2);
         }
 
         /* Logos Section */
         .logos {
             padding: 60px 0;
             border-top: 1px solid rgba(255, 255, 255, 0.2);
-            background: transparent;
+            background: #3d2755;
         }
 
         .logos-grid {
@@ -637,7 +649,7 @@
 
         .logo-item {
             font-size: 0.9rem;
-            color: var(--dark-bg);
+            color: var(--text-secondary);
             font-weight: 500;
             opacity: 0.7;
         }
